--- a/web/css/default.css
+++ b/web/css/default.css
@@ -166,11 +166,11 @@
 }
 
 #sf_admin_container ul li.sf_admin_action_moveup a, #sf_admin_container ul li.sf_admin_action_moveup span {
-  background: url(/images/arrow_up.png) no-repeat 0 0;
+  background: url(../images/arrow_up.png) no-repeat 0 0;
 }
 
 #sf_admin_container ul li.sf_admin_action_movedown a, #sf_admin_container ul li.sf_admin_action_movedown span {
-  background: url(/images/arrow_down.png) no-repeat 0 0;
+  background: url(../images/arrow_down.png) no-repeat 0 0;
 }
 
 #sf_admin_container ul li.disabled span {
